[Fix][Connector-V2] Keep Typesense sink test Java 8 compatible